--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                 <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Edu">Education</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Certificates">Certificates</a></li>
-                <li class="nav-item"><a class="nav-link" href="#Acco">Accomplishment Report</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Skills">Skills</a></li>
                 <li class="nav-item"><a class="nav-link" href="#Contact">Contact</a></li>
             </ul>
         </div>
@@ -610,46 +610,46 @@
 </section>
 
 
-<section id="Acco" class="pt-5 pb-5">
+<section id="Skills" class="pt-5 pb-5">
     <div class="container">
-        <h2 class="text-center mb-5">Accomplishment Report: Anjo World Theme Park</h2>
+        <h2 class="text-center mb-5">Skills and Expertise: Francis Jay D. Rotol</h2>
         <div class="row">
             <div class="col-md-6 mb-5">
-                <div class="education-item p-4 border" >
-                    <h3 class="mb-3">CCTV Operation</h3>
-                    <p>My experience with CCTV systems at Anjo World has been extensive and fulfilling. Here are some key highlights:</p>
+                <div class="education-item p-4 border">
+                    <h3 class="mb-3">Technical Support & Troubleshooting</h3>
+                    <p>Proficient in providing technical support and troubleshooting across a variety of systems. My skills include:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
-                            <i class="fas fa-video mr-2"></i>
-                            <strong>Learned CCTV Application:</strong> Gained comprehensive knowledge of CCTV systems and their applications within the park's infrastructure.
+                            <i class="fas fa-headset mr-2"></i>
+                            <strong>IT Support:</strong> Delivered expert IT support for theme park operations, assisting both staff and visitors with technical issues.
                         </li>
                         <li class="mb-2">
-                            <i class="fas fa-tasks mr-2"></i>
-                            <strong>Implemented CCTV Protocols:</strong> Successfully applied CCTV protocols to monitor various sections of the theme park, ensuring the safety and security of guests and staff.
+                            <i class="fas fa-tools mr-2"></i>
+                            <strong>Hardware Troubleshooting:</strong> Skilled in diagnosing and resolving hardware issues, ensuring minimal downtime in operations.
                         </li>
                         <li>
-                            <i class="fas fa-tools mr-2"></i>
-                            <strong>Troubleshooting Expertise:</strong> Developed troubleshooting expertise to promptly address any technical issues or anomalies within the CCTV network, ensuring uninterrupted surveillance.
+                            <i class="fas fa-cogs mr-2"></i>
+                            <strong>Software & System Maintenance:</strong> Managed and maintained key software applications, ensuring consistent and effective performance.
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
-                    <h3 class="mb-3">Technical Support Proficiency</h3>
-                    <p>Providing technical support at Anjo World allowed me to hone my skills in a dynamic environment. Some key accomplishments include:</p>
+                    <h3 class="mb-3">Network & System Administration</h3>
+                    <p>Experienced in configuring and maintaining network devices and systems to ensure smooth and secure operations. Key skills include:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
-                            <i class="fas fa-headset mr-2"></i>
-                            <strong>Technical Support Skills:</strong> Demonstrated proficiency in providing technical support to park visitors and staff, resolving a wide range of issues related to park facilities and equipment.
+                            <i class="fas fa-network-wired mr-2"></i>
+                            <strong>Network Device Installation:</strong> Installed and administered network devices, ensuring proper configuration and efficient communication across systems.
                         </li>
                         <li class="mb-2">
-                            <i class="fas fa-smile mr-2"></i>
-                            <strong>Customer Satisfaction:</strong> Received positive feedback from patrons and colleagues for delivering prompt and effective technical assistance, enhancing overall customer satisfaction.
+                            <i class="fas fa-fire mr-2"></i>
+                            <strong>Firewall Configuration:</strong> Configured and maintained Fortigate firewalls, safeguarding systems from external threats.
                         </li>
                         <li>
-                            <i class="fas fa-book-reader mr-2"></i>
-                            <strong>Continuous Learning:</strong> Maintained a proactive approach to learning emerging technologies and solutions, ensuring up-to-date knowledge to address evolving technical challenges.
+                            <i class="fas fa-server mr-2"></i>
+                            <strong>VMware Server Management:</strong> Administered VMware servers to support scalable IT infrastructure within the park’s operations.
                         </li>
                     </ul>
                 </div>
@@ -658,40 +658,40 @@
         <div class="row">
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
-                    <h3 class="mb-3">Photoshop Skills</h3>
-                    <p>My skills in Adobe Photoshop have been instrumental in creating engaging visual content. Here are some key highlights:</p>
+                    <h3 class="mb-3">Website & Infrastructure Management</h3>
+                    <p>Skilled in managing website functionality and IT infrastructure, ensuring reliability and performance. Some accomplishments include:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
-                            <i class="fas fa-paint-brush mr-2"></i>
-                            <strong>Graphic Design:</strong> Developed and designed graphics for various projects, enhancing the visual appeal and communication of key messages.
+                            <i class="fas fa-desktop mr-2"></i>
+                            <strong>Website Management:</strong> Managed and updated the theme park's website, enhancing its functionality and user experience.
                         </li>
                         <li class="mb-2">
-                            <i class="fas fa-layer-group mr-2"></i>
-                            <strong>Photo Editing:</strong> Proficient in photo editing techniques, including retouching, color correction, and image manipulation.
+                            <i class="fas fa-network mr-2"></i>
+                            <strong>Network Infrastructure:</strong> Installed and maintained network devices, ensuring seamless connectivity and security within the theme park.
                         </li>
                         <li>
-                            <i class="fas fa-file-image mr-2"></i>
-                            <strong>Creative Projects:</strong> Successfully completed creative projects that required advanced Photoshop skills, contributing to marketing and promotional efforts.
+                            <i class="fas fa-cogs mr-2"></i>
+                            <strong>System Administration:</strong> Administered back-office systems like UTAK and Retailware, ensuring smooth operations and data management.
                         </li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
-                    <h3 class="mb-3">Printer Troubleshooting</h3>
-                    <p>My experience in printer troubleshooting has been significant during my tenure at Anjo World Theme Park. Here are some key accomplishments:</p>
+                    <h3 class="mb-3">Leadership & Problem-Solving</h3>
+                    <p>Effective leadership and problem-solving skills honed through experience in a fast-paced, demanding environment:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
-                            <i class="fas fa-print mr-2"></i>
-                            <strong>Printer Maintenance:</strong> Conducted routine maintenance on printers, ensuring optimal performance and minimizing downtime.
+                            <i class="fas fa-users mr-2"></i>
+                            <strong>Leadership:</strong> Demonstrated leadership by providing guidance to the IT team and overseeing key IT functions.
                         </li>
                         <li class="mb-2">
-                            <i class="fas fa-exclamation-triangle mr-2"></i>
-                            <strong>Troubleshooting Expertise:</strong> Identified and resolved printer issues promptly, including paper jams, connectivity issues, and print quality problems.
+                            <i class="fas fa-lightbulb mr-2"></i>
+                            <strong>Problem Solving:</strong> Applied strong problem-solving techniques to identify and resolve complex IT issues efficiently.
                         </li>
                         <li>
-                            <i class="fas fa-wrench mr-2"></i>
-                            <strong>Hardware Repair:</strong> Proficient in diagnosing and repairing printer hardware components, contributing to uninterrupted operation of printing facilities.
+                            <i class="fas fa-tasks mr-2"></i>
+                            <strong>Pressure Handling:</strong> Maintained composure and focus while managing multiple tasks and working under pressure.
                         </li>
                     </ul>
                 </div>
@@ -699,6 +699,7 @@
         </div>
     </div>
 </section>
+
 
 <section id="Images">
   <div class="container bg-light">
