--- a/index.html
+++ b/index.html
@@ -399,59 +399,73 @@
     transform: scale(1.05); /* Slightly enlarge the button on hover */
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1); /* Subtle shadow on hover */
 }
-          .contact-section {
-            padding: 60px 0;
-            background: white;
-            color: white;
-        }
+         .contact-section {
+    padding: 60px 0;
+    background: #333; /* Dark background for a stronger, more masculine vibe */
+    color: #fff;
+}
 
-        .contact-section h2 {
-            font-size: 2.5rem;
-            margin-bottom: 40px;
-            text-align: center;
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            color: white;
-            position: relative;
-        }
+.contact-section h2 {
+    font-size: 2.5rem;
+    margin-bottom: 40px;
+    text-align: center;
+    font-family: 'Roboto', Arial, sans-serif; /* Stronger, bold font */
+    color: #fff;
+    position: relative;
+}
 
-        .contact-info {
-            background-color:white;
-            border-radius: 8px;
-            padding: 30px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        }
+.contact-info {
+    background-color: #444; /* Darker card background */
+    border-radius: 8px;
+    padding: 30px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+}
 
-        .contact-info ul {
-            padding: 0;
-            margin: 0;
-            list-style: none;
-        }
+.contact-info ul {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
 
-        .contact-info ul li {
-            font-size: 1.1rem;
-            display: flex;
-            align-items: center;
-            margin-bottom: 15px;
-            color: #333;
-        }
+.contact-info ul li {
+    font-size: 1.1rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
+    color: #ddd; /* Slightly lighter text color */
+}
 
-        .contact-info ul li i {
-            margin-right: 10px;
-            color: #ff7e5f;
-        }
+.contact-info ul li i {
+    margin-right: 10px;
+    color: #ff5722; /* Bold accent color */
+}
 
-        .contact-info ul li strong {
-            margin-right: 5px;
-        }
+.contact-info ul li strong {
+    margin-right: 5px;
+    color: #ff5722; /* Accent color for labels */
+}
 
-        .contact-info a {
-            color: #ff7e5f;
-            text-decoration: none;
-        }
+.contact-info a {
+    color: #ff5722; /* Accent color */
+    text-decoration: none;
+}
 
-        .contact-info a:hover {
-            text-decoration: underline;
-        }
+.contact-info a:hover {
+    text-decoration: underline;
+}
+
+.btn-primary {
+    background-color: #ff5722; /* Matching button color */
+    color: #fff;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
+.btn-primary:hover {
+    background-color: #d84e1b; /* Darker hover effect */
+}
+
 
         .btn-primary {
             background-color: #ff7e5f;
@@ -793,13 +807,14 @@
                         </li>
                     </ul>
                     <div class="text-center mt-4">
-                        <a href="javascript:void(0);" class="btn btn-primary" onclick="composeEmail()" >Send Message</a>
+                        <a href="javascript:void(0);" class="btn btn-primary" onclick="composeEmail()">Send Message</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 
 <script>
   function composeEmail() {
