--- a/index.html
+++ b/index.html
@@ -399,26 +399,26 @@
     transform: scale(1.05); /* Slightly enlarge the button on hover */
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1); /* Subtle shadow on hover */
 }
-         .contact-section {
+       .contact-section {
     padding: 60px 0;
-    background: #333; /* Dark background for a stronger, more masculine vibe */
-    color: #fff;
+    background-color: #1f1f1f; /* Deep black background */
+    color: white;
 }
 
 .contact-section h2 {
     font-size: 2.5rem;
     margin-bottom: 40px;
     text-align: center;
-    font-family: 'Roboto', Arial, sans-serif; /* Stronger, bold font */
-    color: #fff;
+    font-family: 'Roboto', Arial, sans-serif;
+    color: white;
     position: relative;
 }
 
 .contact-info {
-    background-color: #444; /* Darker card background */
+    background-color: #2a2a2a; /* Darker background for the contact info */
     border-radius: 8px;
     padding: 30px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 }
 
 .contact-info ul {
@@ -432,21 +432,21 @@
     display: flex;
     align-items: center;
     margin-bottom: 15px;
-    color: #ddd; /* Slightly lighter text color */
+    color: #ccc; /* Light gray text for contrast */
 }
 
 .contact-info ul li i {
     margin-right: 10px;
-    color: #ff5722; /* Bold accent color */
+    color: #1e3a8a; /* Dark blue for icons */
 }
 
 .contact-info ul li strong {
     margin-right: 5px;
-    color: #ff5722; /* Accent color for labels */
+    color: #1e3a8a; /* Dark blue for labels */
 }
 
 .contact-info a {
-    color: #ff5722; /* Accent color */
+    color: #1e3a8a; /* Dark blue for links */
     text-decoration: none;
 }
 
@@ -455,7 +455,7 @@
 }
 
 .btn-primary {
-    background-color: #ff5722; /* Matching button color */
+    background-color: #1e3a8a; /* Dark blue button */
     color: #fff;
     padding: 10px 20px;
     border-radius: 5px;
@@ -463,31 +463,11 @@
 }
 
 .btn-primary:hover {
-    background-color: #d84e1b; /* Darker hover effect */
+    background-color: #163c69; /* Darker blue for hover */
 }
 
 
-        .btn-primary {
-            background-color: #ff7e5f;
-            border-color: #ff7e5f;
-            padding: 10px 20px;
-            font-size: 1rem;
-            border-radius: 30px;
-            text-transform: uppercase;
-            transition: background-color 0.3s ease;
-            cursor: pointer;
-            color: #fff;
-            text-decoration: none;
-            display: inline-block;
-        }
-
-        .btn-primary:hover {
-            background-color: #feb47b;
-        }
-
-        .shadow-sm {
-            box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075) !important;
-        }
+       
     </style>
 </head>
 <body>
@@ -791,11 +771,11 @@
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-facebook"></i> 
-                            <strong>Facebook:</strong> <a href="https://www.facebook.com/jayrotol05"target="blank">Francis Jay Rotol</a>
+                            <strong>Facebook:</strong> <a href="https://www.facebook.com/jayrotol05" target="blank">Francis Jay Rotol</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-instagram"></i> 
-                            <strong>Instagram:</strong> <a href="https://www.instagram.com/jay.rtl/"target="blank">Francis Jay D. Rotol</a>
+                            <strong>Instagram:</strong> <a href="https://www.instagram.com/jay.rtl/" target="blank">Francis Jay D. Rotol</a>
                         </li>
                         <li class="mb-3">
                             <i class="fab fa-whatsapp"></i> 
