--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
     box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1); /* Subtle shadow on hover */
 }
        .contact-section {
-    background-color: #1f1f1f; /* Deep black background */
+    background-color: white; /* Deep black background */
     color: white;
     padding: 10px 0;
     position: fixed;
