--- a/index.html
+++ b/index.html
@@ -408,6 +408,15 @@
     width: 100%;
 }
 
+.contact-section {
+    background-color: white; /* Deep black background */
+    color: blue;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
 .contact-info {
     padding: 10px 0;
 }
@@ -419,6 +428,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    flex-wrap: wrap; /* Allow items to wrap to the next line on smaller screens */
 }
 
 .contact-info ul li {
@@ -447,10 +457,47 @@
     margin-right: 20px;
 }
 
+.contact-info ul li.mb-2 {
+    margin-bottom: 10px; /* Add some space between items on mobile */
+}
+
 @media (max-width: 768px) {
+    .contact-info ul {
+        justify-content: flex-start; /* Align items to the left */
+    }
+
     .contact-info ul li {
-        font-size: 0.9rem;
-        margin-bottom: 5px;
+        font-size: 0.9rem; /* Slightly smaller font size */
+        margin-right: 15px;
+        margin-bottom: 8px; /* Space between items when stacked */
+    }
+
+    .contact-info ul li i {
+        font-size: 1.2rem; /* Slightly larger icons for better visibility */
+    }
+}
+
+@media (max-width: 480px) {
+    .contact-section {
+        padding: 15px 0; /* Adjust padding on very small screens */
+    }
+
+    .contact-info ul li {
+        font-size: 0.85rem; /* Further reduce font size on very small screens */
+        margin-right: 10px;
+    }
+
+    .contact-info ul li i {
+        font-size: 1rem; /* Adjust icon size */
+    }
+
+    .contact-info ul {
+        flex-direction: column; /* Stack items vertically on small screens */
+        align-items: center;
+    }
+
+    .contact-info ul li {
+        margin-bottom: 15px; /* More space between items when stacked */
     }
 }
 
@@ -746,28 +793,28 @@
         <div class="row justify-content-center text-center">
             <div class="col-md-12">
                 <div class="contact-info d-flex justify-content-center align-items-center">
-                    <ul class="list-unstyled d-flex mb-0">
-                        <li class="mx-4">
+                    <ul class="list-unstyled d-flex flex-wrap justify-content-center mb-0">
+                        <li class="mx-4 mb-2">
                             <i class="fas fa-envelope"></i> 
                             <a href="mailto:rotoljay03@gmail.com">Email</a>
                         </li>
-                        <li class="mx-4">
+                        <li class="mx-4 mb-2">
                             <i class="fas fa-phone"></i> 
                             <a href="tel:+639512352816">Phone</a>
                         </li>
-                        <li class="mx-4">
+                        <li class="mx-4 mb-2">
                             <i class="fab fa-facebook"></i> 
                             <a href="https://www.facebook.com/jayrotol05" target="blank">Facebook</a>
                         </li>
-                        <li class="mx-4">
+                        <li class="mx-4 mb-2">
                             <i class="fab fa-instagram"></i> 
                             <a href="https://www.instagram.com/jay.rtl/" target="blank">Instagram</a>
                         </li>
-                        <li class="mx-4">
+                        <li class="mx-4 mb-2">
                             <i class="fab fa-whatsapp"></i> 
                             <a href="https://wa.me/639512352816">WhatsApp</a>
                         </li>
-                        <li class="mx-4">
+                        <li class="mx-4 mb-2">
                             <i class="fab fa-viber"></i> 
                             <a href="viber://add?number=639512352816">Viber</a>
                         </li>
@@ -777,6 +824,7 @@
         </div>
     </div>
 </section>
+
 
 
 <script>
