--- a/index.html
+++ b/index.html
@@ -566,13 +566,23 @@
                 <h2>Core Competencies</h2>
                 <p class="education-desc"><b>Computer Engineering Technology</b></p>
                 <ul class="education-list">
-                    <li>Working knowledge in MS Word, MS Excel, MS PowerPoint, MS Publisher</li>
-                    <li>Set up and maintain local and wide area networks and install hardware and software applications</li>
-                    <li>Design web pages and other similar computer graphics and multimedia applications such as Adobe Photoshop</li>
-                    <li>Proficient in internet use and e-mail correspondence</li>
-                    <li>Proficient at troubleshooting computer problems</li>
-                    <li>A lot of experience installing CCTV systems</li>
-                    <li>Excel in providing effective tech support</li>
+                    <li>Skilled in hardware installation, maintenance, and troubleshooting of computer systems and network devices.</li>
+<li>Experienced in setting up and maintaining local and wide area networks, including configuration using OC300 Omada Controller.</li>
+<li>Knowledgeable in VMware and Fortinet firewall system administration.</li>
+
+<li>Proficient in Microsoft Office applications (Word, Excel, PowerPoint, Publisher) for documentation and reporting.</li>
+
+<li>Hands-on experience in installing and configuring CCTV systems, ITC and SPON speakers, and door access systems.</li>
+
+<li>Capable of performing fiber optic fusion splicing, TDR testing, and port mapping for structured cabling.</li>
+
+<li>Proficient in remote IT support using AnyDesk and VNC.</li>
+
+<li>Basic understanding of Windows Server 2022 setup, Active Directory, and file server implementation.</li>
+
+<li>Familiar with web page design and multimedia applications such as Adobe Photoshop.</li>
+
+<li>Strong technical support skills with a proven ability to resolve IT issues efficiently under pressure.</li>
                 </ul>
             </div>
         </div>
@@ -844,4 +854,5 @@
 
 </body>
 </html>
+
 
