--- a/index.html
+++ b/index.html
@@ -616,6 +616,16 @@
             <div class="col-md-6 mb-5">
                 <div class="certificate-item p-4 border">
                     <div class="certificate-img-container">
+                        <img src="img/COE.jpg" alt="Certificate 1" class="img-fluid">
+                        <div class="overlay">
+                            <div class="text">COE<br>2025</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-5">
+                <div class="certificate-item p-4 border">
+                    <div class="certificate-img-container">
                         <img src="img/jay7.jpg" alt="Certificate 2" class="img-fluid">
                         <div class="overlay">
                             <div class="text">Cisco CCNA7: Enterprise Networking, Security, and Automation<br>Completed: 26 Jan 2023</div>
@@ -854,5 +864,6 @@
 
 </body>
 </html>
+
 
 
