--- a/index.html
+++ b/index.html
@@ -662,84 +662,91 @@
     <div class="container">
         <h2 class="text-center mb-5">Skills and Expertise: Francis Jay D. Rotol</h2>
         <div class="row">
+            <!-- Technical Support & Troubleshooting -->
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
                     <h3 class="mb-3">Technical Support & Troubleshooting</h3>
-                    <p>Proficient in providing technical support and troubleshooting across a variety of systems. My skills include:</p>
+                    <p>Proficient in delivering IT support and troubleshooting across various systems to ensure smooth and reliable operations. My skills include:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
                             <i class="fas fa-headset mr-2"></i>
-                            <strong>IT Support:</strong> Delivered expert IT support for theme park operations, assisting both staff and visitors with technical issues.
+                            <strong>IT Support:</strong> Provided technical assistance for theme park operations, supporting both staff and IT infrastructure to maintain system stability.
                         </li>
                         <li class="mb-2">
                             <i class="fas fa-tools mr-2"></i>
-                            <strong>Hardware Troubleshooting:</strong> Skilled in diagnosing and resolving hardware issues, ensuring minimal downtime in operations.
+                            <strong>Hardware Troubleshooting:</strong> Diagnosed and repaired computers, network devices, and CCTV systems to minimize downtime and maintain efficiency.
                         </li>
                         <li>
                             <i class="fas fa-cogs mr-2"></i>
-                            <strong>Software & System Maintenance:</strong> Managed and maintained key software applications, ensuring consistent and effective performance.
+                            <strong>Software & System Maintenance:</strong> Maintained and configured applications like UTAK, Retailware, and FIIX CMMS to ensure optimal performance.
                         </li>
                     </ul>
                 </div>
             </div>
+
+            <!-- Network & System Administration -->
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
                     <h3 class="mb-3">Network & System Administration</h3>
-                    <p>Experienced in configuring and maintaining network devices and systems to ensure smooth and secure operations. Key skills include:</p>
+                    <p>Experienced in configuring, managing, and maintaining network systems and devices to ensure secure and efficient IT operations. Key skills include:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
                             <i class="fas fa-network-wired mr-2"></i>
-                            <strong>Network Device Installation:</strong> Installed and administered network devices, ensuring proper configuration and efficient communication across systems.
+                            <strong>Network Setup & Configuration:</strong> Installed and maintained LAN/WAN networks using OC300 Omada Controller for centralized management.
                         </li>
                         <li class="mb-2">
                             <i class="fas fa-fire mr-2"></i>
-                            <strong>Firewall Configuration:</strong> Configured and maintained Fortigate firewalls, safeguarding systems from external threats.
+                            <strong>Firewall Configuration:</strong> Configured and maintained Fortinet firewalls to enhance network protection and data security.
                         </li>
                         <li>
                             <i class="fas fa-server mr-2"></i>
-                            <strong>VMware Server Management:</strong> Administered VMware servers to support scalable IT infrastructure within the park’s operations.
+                            <strong>Server & Virtualization:</strong> Managed VMware and Windows Server 2022 operations including Active Directory, file sharing, and system access control.
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
+
         <div class="row">
+            <!-- Website & Infrastructure Management -->
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
                     <h3 class="mb-3">Website & Infrastructure Management</h3>
-                    <p>Skilled in managing website functionality and IT infrastructure, ensuring reliability and performance. Some accomplishments include:</p>
+                    <p>Skilled in maintaining IT infrastructure, network systems, and software integration to support daily business operations. Some accomplishments include:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
                             <i class="fas fa-desktop mr-2"></i>
-                            <strong>Website Management:</strong> Managed and updated the theme park's website, enhancing its functionality and user experience.
+                            <strong>System Administration:</strong> Managed internal systems, back-office software, and network-based platforms ensuring operational reliability.
                         </li>
                         <li class="mb-2">
                             <i class="fas fa-network mr-2"></i>
-                            <strong>Network Infrastructure:</strong> Installed and maintained network devices, ensuring seamless connectivity and security within the theme park.
+                            <strong>Infrastructure Maintenance:</strong> Installed and configured ITC and SPON IP speakers, amplifiers, and related software systems.
                         </li>
                         <li>
-                            <i class="fas fa-cogs mr-2"></i>
-                            <strong>System Administration:</strong> Administered back-office systems like UTAK and Retailware, ensuring smooth operations and data management.
+                            <i class="fas fa-laptop-code mr-2"></i>
+                            <strong>Remote Support:</strong> Performed system troubleshooting via AnyDesk and VNC, ensuring quick and efficient technical resolutions.
                         </li>
                     </ul>
                 </div>
             </div>
+
+            <!-- Leadership & Problem-Solving -->
             <div class="col-md-6 mb-5">
                 <div class="education-item p-4 border">
                     <h3 class="mb-3">Leadership & Problem-Solving</h3>
-                    <p>Effective leadership and problem-solving skills honed through experience in a fast-paced, demanding environment:</p>
+                    <p>Demonstrated leadership and analytical skills through hands-on experience in managing IT projects and solving technical challenges efficiently:</p>
                     <ul class="list-unstyled pl-3">
                         <li class="mb-2">
                             <i class="fas fa-users mr-2"></i>
-                            <strong>Leadership:</strong> Demonstrated leadership by providing guidance to the IT team and overseeing key IT functions.
+                            <strong>Team Leadership:</strong> Served as Lead Man on-site, supervising installations, managing teams, and ensuring project quality.
                         </li>
                         <li class="mb-2">
                             <i class="fas fa-lightbulb mr-2"></i>
-                            <strong>Problem Solving:</strong> Applied strong problem-solving techniques to identify and resolve complex IT issues efficiently.
+                            <strong>Analytical Thinking:</strong> Applied critical thinking to identify root causes and resolve complex IT and network issues effectively.
                         </li>
                         <li>
                             <i class="fas fa-tasks mr-2"></i>
-                            <strong>Pressure Handling:</strong> Maintained composure and focus while managing multiple tasks and working under pressure.
+                            <strong>Work Under Pressure:</strong> Maintained focus and composure during high-demand operations, ensuring timely and accurate results.
                         </li>
                     </ul>
                 </div>
@@ -864,6 +871,7 @@
 
 </body>
 </html>
+
 
 
 
