--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     <p class="quote">"Striving for success in all aspects of life"</p>
 
     <div class="hero-buttons">
-      <a href="#Edu" class="btn-resume">Resume</a>
+      <a href="https://github.com/jay-rtl/Porfolio-Jay/raw/main/Resume03.pdf" class="custom-download-btn mt-3" download>Resume</a>
       <a href="#Skills" class="btn-skills">Skills</a>
       <a href="#Certificates" class="btn-certificate">Certificate</a>
       <a href="#Contact" class="btn-contact">Contact</a>
@@ -283,6 +283,54 @@
       </div>
     </div>
   </section>
+  <!-- Album Section -->
+<section id="Album" class="py-5 bg-white">
+  <div class="container text-center">
+    <h2 class="mb-5">Project Album</h2>
+    <div id="albumCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <!-- Slide 1 -->
+        <div class="carousel-item active">
+          <img src="img/jay1.jpg" class="d-block w-100 rounded shadow-sm" alt="Project 1">
+           <img src="img/francis3.jpg" class="d-block w-100 rounded shadow-sm" alt="Project 1">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>CCTV Installation</h5>
+           
+          </div>
+        </div>
+
+        <!-- Slide 2 -->
+        <div class="carousel-item">
+          <img src="img/sample2.jpg" class="d-block w-100 rounded shadow-sm" alt="Project 2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Network Setup</h5>
+            <p>Replace with your project photo and short description.</p>
+          </div>
+        </div>
+
+        <!-- Slide 3 -->
+        <div class="carousel-item">
+          <img src="img/sample3.jpg" class="d-block w-100 rounded shadow-sm" alt="Project 3">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Server Configuration</h5>
+            <p>Use high-quality images for best look.</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Controls -->
+      <a class="carousel-control-prev" href="#albumCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#albumCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</section>
+
 
   <!-- Contact Section -->
   <section id="Contact" class="py-5 bg-light">
@@ -324,3 +372,4 @@
   </script>
 </body>
 </html>
+
